[project]
name = "data-pipeline-vbpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[postgres]>=1.24.0",
    "environs>=14.6.0",
    "grandalf>=0.8",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
