[project]
name = "data-pipeline-vbpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dlt[postgres]>=1.24.0",
    "environs>=14.6.0",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "grandalf>=0.8",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "psycopg2-binary>=2.9.11",
    "scrapy>=2.14.2",
    "scrapy-user-agents>=0.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
