[project]
name = "data-pipeline-vbpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dlt[postgres]>=1.27.1",
    "environs>=14.6.0",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "langchain-core>=1.2.20",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.0.1",
    "langchain-pinecone>=0.2.13",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "markdownify>=1.2.2",
    "pinecone>=7.3.0",
    "plotext>=5.3.2",
    "psycopg2-binary>=2.9.12",
    "scrapy>=2.16.0",
    "scrapy-user-agents>=0.1.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
